--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+
+
 
 android {
     compileSdkVersion 24
@@ -23,8 +24,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:appcompat-v7:24.1.0'
-
+    compile 'com.google.firebase:firebase-auth:9.4.0'
+    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
 }
+apply plugin: 'com.google.gms.google-services'
