--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme"></activity>
     </application>
 
