--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ captures/
 
 # Keystore files
 *.jks
+
+app/src/debug/res/values/google_maps_api.xml
+app/src/main/res/values/google_maps_api.xml
+app/src/release/res/values/google_maps_api.xml
