--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.application'
 
-
-
 android {
     compileSdkVersion 24
     buildToolsVersion "23.0.3"
@@ -10,8 +8,8 @@ android {
         applicationId "com.andreakim.kkspetsapp"
         minSdkVersion 19
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -30,5 +28,6 @@ dependencies {
     compile 'com.android.support:support-v4:24.1.1'
     compile 'com.google.android.gms:play-services-auth:9.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:cardview-v7:24.0.+'
 }
 apply plugin: 'com.google.gms.google-services'
