--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.andreakim.kkspetsapp"
+        applicationId "com.andreakim.kkspetschicago"
         minSdkVersion 19
         targetSdkVersion 24
         versionCode 2
