--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ captures/
 app/src/debug/res/values/google_maps_api.xml
 app/src/main/res/values/google_maps_api.xml
 app/src/release/res/values/google_maps_api.xml
+app/src/main/res/values/strings.xml
